--- a/public/index.css
+++ b/public/index.css
@@ -7,7 +7,7 @@ body {
 }
 /* general styles */
 :root {
-  --bkg-color: #f8f8ff;
+  --bkg-color: white;
   --logo-color: #1e90ff;
   --white-color: #ffffff;
 }
@@ -16,7 +16,6 @@ body {
 }
 body {
   background: var(--bkg-color);
-  background-color: #eee;
 }
 img {
   width: 100%;
@@ -34,6 +33,9 @@ a {
 header {
   padding: 1.5em;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .logo {
   font-size: 1.6rem;
@@ -208,11 +210,11 @@ main {
   font-weight: 300;
 }
 .project a {
-  border: 1px solid;
+  border: none;
   padding: 0.5em 1em;
   display: inline-block;
   width: 90px;
-  border-radius: 4px;
+  border-radius:6px;
   color: white;
   text-align: center;
   cursor: pointer;
@@ -224,10 +226,30 @@ main {
   margin-left: 2em;
   background: limegreen;
 }
-.project a:hover {
-  background: #0e5db9;
-  transform: scale(0.97);
+.project a:nth-of-type(2):hover {
+  background: #03851d;
 }
+.project a:first-of-type:hover {
+  background: #0e5db9;
+}
+/* download link */
+.download{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #03851d;
+  color: white;
+  padding: 0.5em 1em;
+  border-radius: 6px;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: all 0.3s;
+  gap: .5em;
+}
+.download:hover{
+  background-color: rgb(2, 150, 2);
+}
+
 /* media queries */
 @media screen and (min-width: 1000px) {
   .flex-row {
