--- a/public/index.css
+++ b/public/index.css
@@ -1,24 +1,38 @@
+:root {
+  --white: #fff;
+  --black: #000;
+  --gray: #8b8b8b;
+  --highlight: #e5ffc3;
+  --red: #e4002b;
+  --green: #24d05a;
+  --pink: #eb4888;
+  --blue: #10a2f5;
+  --yellow: #e9bc3f;
+}
 html,
 body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #eee;
-}
-/* general styles */
-:root {
-  --bkg-color: white;
-  --logo-color: #1e90ff;
-  --white-color: #ffffff;
 }
 * {
   box-sizing: border-box;
 }
 body {
-  background: var(--bkg-color);
+  background: var(--white);
+  color: var(--black);
+}
+body.dark-mode,
+body.dark-mode button,
+body.dark-mode .go-home,
+button.dark-mode,
+button.dark-mode button {
+  background: var(--black);
+  color: var(--white);
 }
 img {
   width: 100%;
+  display: block;
 }
 p,
 h2,
@@ -27,235 +41,201 @@ h3 {
 }
 a {
   text-decoration: none;
+  display: inline-block;
+  color: var(--blue);
+}
+/* make scroll bar 4px wide */
+::-webkit-scrollbar {
+  width: 4px;
+}
+.header-section {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.header-frame {
+  max-width: 350px;
+  margin-bottom: 1em;
+  margin-right: 1em;
+}
+.header-frame h1 {
+  font-weight: 400;
+}
+.header-frame h2 {
+  color: var(--gray);
+  font-weight: 300;
+  margin: 0 0 0.5em 0;
+}
+.img-frame {
+  position: relative;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+.dark-mode-toggler {
+  position: fixed;
+  top: 5px;
+  right: 20px;
+}
+.dark-mode-toggler input[type="checkbox"] {
+  display: none;
+}
+.dark-mode-toggler label {
+  position: relative;
+}
+.dark-mode-toggler input[type="checkbox"]:checked + label::before {
+  background: var(--black);
+  border: 2px solid var(--white);
+}
+.dark-mode-toggler input[type="checkbox"] + label::before {
+  content: "";
+  display: block;
+  height: 26px;
+  width: 60px;
+  background: var(--white);
+  border: 2px solid var(--gray);
+  border-radius: 15px;
+  position: absolute;
+  top: 0px;
+  left: -65px;
+}
+.dark-mode-toggler input[type="checkbox"]:checked + label::after {
+  left: -28px;
+  background: var(--black);
+  border: 2px solid var(--white);
+  transition: all 0.4s ease-in;
+}
+.dark-mode-toggler input[type="checkbox"] + label::after {
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+  background: var(--gray);
+  border: 2px solid var(--white);
+  border-radius: 50%;
+  position: absolute;
+  top: 3px;
+  left: -62px;
+  transition: all 0.4s ease-in;
+}
+.container {
+  margin: 50px auto;
+  padding: 5px;
+  max-width: 650px;
 }
 
-/* logo styles */
-header {
-  padding: 1.5em;
+.gradient-box {
+  background: linear-gradient(90deg, #1e90ff, #03851d);
+  padding: 4px;
+  border-radius: 50%;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  animation: shimmer 10s infinite;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+.tabs-section {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
 }
-.logo {
-  font-size: 1.6rem;
-  font-weight: bold;
-  margin: 0;
-  line-height: 110%;
+
+.tabs {
+  margin: 25px 0;
+  text-align: start;
 }
-/* hero section */
-.hero {
-  display: grid;
-  place-items: center;
+
+.tab {
+  flex: 1;
+  text-align: center;
+  cursor: pointer;
+  border: 2px solid var(--gray);
+  width: 120px;
+  height: 30px;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: var(--black);
+  font-size: 1rem;
+  overflow: auto;
+  transition: 0.4s ease all;
+  text-transform: capitalize;
+}
+
+.tab + .tab {
+  margin-left: 1em;
+}
+.active-tab {
+  border-color: var(--blue);
+  color: var(--blue);
+}
+.tab:hover {
+  border-color: var(--blue);
+  color: var(--blue);
+}
+
+.tab-content {
+  display: flex;
+  flex-direction: column;
+}
+.tab-content h2 {
   margin-bottom: 1em;
 }
-.card {
-  min-width: 250px;
-  max-width: 400px;
-  padding: 2em;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  border-radius: 0px;
-  text-align: center;
-  border: 1px lightgray solid;
-}
-.card__avatar {
-  width: 150px;
-  height: 150px;
-  border-radius: 20%;
-  object-fit: cover;
-  align-self: center;
-}
-.card__name {
-  font-weight: 600;
-  font-size: 1rem;
-  text-transform: capitalize;
-}
-.card__title {
-  font-size: 12px;
-  font-weight: 500;
-  text-transform: capitalize;
-}
-.card__flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 5px;
-}
-.location {
-  font-size: 0.8rem;
-  font-weight: 500;
-}
-.card__desc {
-  line-height: 1.8;
-  padding: 1em;
-  font-size: 14px;
+.tab-content p {
+  margin-bottom: 1em;
+  letter-spacing: 0.5px;
   font-weight: 300;
-  border-top: 1px solid lightgrey;
-  border-bottom: 1px solid lightgrey;
-  text-align: left;
+  line-height: 160%;
 }
-.card__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  padding: 0.5em;
-  color: var(--white-color);
-  background: var(--logo-color);
-  border-radius: 6px;
-  text-transform: uppercase;
-  font-size: 1rem;
-  transition: background 0.3s;
-}
-.card__link:hover {
-  background: #0e5db9;
-  color: white;
-}
-
-/* My stack */
-
-.stack {
-  margin: 0 auto;
+div.project {
   display: flex;
   flex-direction: column;
-  gap: 3em;
-  align-content: center;
-  margin-bottom: 5em;
-  max-width: 500px;
+  margin-bottom: 1em;
+  border-bottom: 1px solid var(--gray);
+  padding: 0.5em 0;
 }
-.stack h2,
-.project_indicator {
-  text-align: center;
-  padding: 0.5em;
-  text-transform: uppercase;
-  border: 1px solid lightgray;
-  border-left: none;
-  border-right: none;
+div.project:last-child {
+  border-bottom: none;
 }
-.project_indicator {
-  width: 100%;
+div.project h3 {
+  margin-bottom: 0.5em;
 }
-.tech-icon {
-  height: 60px;
-  max-width: 60px;
-  border-radius: 6px;
-  padding: 0.5em;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+div.project p {
+  margin-bottom: 0.5em;
 }
-.stack__container {
+div.project .links {
+  font-weight: 400;
+  font-size: 1rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 1em;
+}
+.tech-list{
+  display: flex;
   flex-wrap: wrap;
-  gap: 1em;
+  /* justify-content: center; */
 }
-
-.social {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  padding: 1em 0;
-  background: lightgrey;
+.tech-icon{
+  width: 30px;
+  height: 30px;
+  margin: 0.5em;
 }
-.social__container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 300px;
-  margin: 0 auto;
-}
-.social_link {
-  cursor: pointer;
-}
-main {
-  padding: 2em 1em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-  flex-direction: column;
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-/* project styles */
-.projects {
-  padding: 1em 0;
-  gap: 1em;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
-.project {
-  padding: 1em;
-  border-radius: 6px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  text-align: center;
-}
-
-.title {
-  font-weight: bold;
-  margin: 0 auto;
-  margin-bottom: 0.5em;
-  padding-bottom: 0.5em;
-  border-bottom: 1px solid;
-  width: fit-content;
-  text-transform: capitalize;
-}
-.description {
-  line-height: 1.4;
-  margin-bottom: 0.5em;
-  font-weight: 300;
-}
-.project a {
-  border: none;
-  padding: 0.5em 1em;
-  display: inline-block;
-  width: 90px;
-  border-radius:6px;
-  color: white;
-  text-align: center;
-  cursor: pointer;
-  font-weight: bold;
-  background: #1e90ff;
-  transition: all 0.3s;
-}
-.project a:nth-of-type(2) {
-  margin-left: 2em;
-  background: limegreen;
-}
-.project a:nth-of-type(2):hover {
-  background: #03851d;
-}
-.project a:first-of-type:hover {
-  background: #0e5db9;
-}
-/* download link */
-.download{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #03851d;
-  color: white;
-  padding: 0.5em 1em;
-  border-radius: 6px;
-  text-transform: uppercase;
-  font-weight: bold;
-  transition: all 0.3s;
-  gap: .5em;
-}
-.download:hover{
-  background-color: rgb(2, 150, 2);
-}
-
-/* media queries */
-@media screen and (min-width: 1000px) {
-  .flex-row {
-    display: flex;
-    flex-direction: row;
-    gap: 3em;
-    justify-content: space-between;
+@media (max-width: 600px) {
+  .tabs {
+    text-align: center;
+  }
+  .tab {
+    margin: 5px;
+  }
+  .container {
+    padding: 20px;
+  }
+  .header-section {
+    justify-content: center;
   }
 }
