--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,17 @@
 :root {
   --white: #fff;
-  --black: #000;
+  --black: #1a1a1a;
   --gray: #8b8b8b;
   --highlight: #e5ffc3;
   --red: #e4002b;
   --green: #24d05a;
   --pink: #eb4888;
   --blue: #10a2f5;
-  --yellow: #e9bc3f;
+  --yellow: #de970b;
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --white: #000;
+    --white: #1a1a1a;
     --black: #fff;
     --gray: #8b8b8b;
     --highlight: #e5ffc3;
@@ -36,13 +36,12 @@ body {
 body {
   background: var(--white);
   color: var(--black);
-  background: rgb(34, 193, 195);
-  background: linear-gradient(
+  /* background: rgb(34, 193, 195); */
+  /* background: linear-gradient(
     0deg,
     rgba(34, 193, 195, 1) 15%,
     rgba(41, 11, 36, 1) 92%
-  );
-  
+  ); */
 }
 
 img {
@@ -95,8 +94,7 @@ a {
   padding-top: 3rem;
   margin-bottom: 2rem;
   min-height: 100dvh;
-  min-height: 100vh;  
-  
+  min-height: 100vh;
 }
 
 .gradient-box {
@@ -106,9 +104,9 @@ a {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   animation: shimmer 10s infinite;
 }
-.gradient-box img{
- width: 150px;
- height: 176px;
+.gradient-box img {
+  width: 150px;
+  height: 176px;
 }
 
 @keyframes shimmer {
@@ -133,10 +131,9 @@ a {
   flex: 1;
   text-align: center;
   cursor: pointer;
-  border: 2px solid var(--gray);
+  border: 1px solid var(--gray);
   width: 120px;
   min-height: 30px;
-  border-radius: 3px;
   box-sizing: border-box;
   color: var(--black);
   font-size: 1rem;
@@ -144,30 +141,25 @@ a {
   transition: 0.4s ease all;
   text-transform: capitalize;
   padding: 0.5em 1em;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .tab + .tab {
   margin-left: 1em;
 }
 .active-tab {
-  border-color: var(--blue);
+  border-color: var(--yellow);
   color: var(--yellow);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .tab:hover {
-  border-color: var(--blue);
-  color: var(--blue);
+  border-color: var(--yellow);
+  color: var(--yellow);
 }
 
 .tab-content {
   display: flex;
   flex-direction: column;
   /* animation: reveal 0.5s ease-in-out; */
-  
 }
 .tab-content h2 {
   margin-bottom: 1em;
@@ -452,18 +444,19 @@ pre [data-line] {
 .blog-content h1 {
   margin: initial;
 }
-figure{
+figure {
   margin: 0;
 }
-.blog img{
+.blog img {
   width: 100%;
   height: auto;
   border-radius: 5px;
   margin-bottom: 1em;
 }
-.blog-content h2 , .blog-content h3{
+.blog-content h2,
+.blog-content h3 {
   margin-bottom: 1em;
 }
-.blog-content p{
+.blog-content p {
   margin-bottom: 1em;
 }
